--- a/index.html
+++ b/index.html
@@ -1,27 +1,112 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Add Item Form</title>
+    <title>Seller DashBoard</title>
+    <!-- Add Bootstrap CSS link -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <style>
+      /* Custom CSS to enhance form appearance */
+      body {
+        background-color: #f5f5f5;
+      }
+      .container {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      .form-control {
+        border-radius: 4px;
+        margin-bottom: 10px;
+      }
+      .btn-primary {
+        background-color: #007bff;
+        border: none;
+      }
+      .btn-primary:hover {
+        background-color: #0056b3;
+      }
+      button{
+        margin-left: 7px;
+      }
+      li {
+        font-size: larger;
+      }
+      .button{
+        float: right;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Add Item</h1>
-    <form id="addItemForm">
-      <label for="itemname">Item Name:</label>
-      <input type="text" id="itemname" name="itemname" required /><br /><br />
+  <body
+    class="d-flex justify-content-center align-items-center"
+    style="height: 60vh"
+  >
+    <div class="container ">
+      <h1 class="text-center">Add Item</h1>
+      <form id="addItemForm">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="itemname">Item Name:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="itemname"
+                name="itemname"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="description">Description:</label>
+              <textarea
+                class="form-control"
+                id="description"
+                name="description"
+                required
+              ></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for "price">Price:</label>
+              <input
+                type="number"
+                class="form-control"
+                id="price"
+                name="price"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="quantity">Quantity:</label>
+              <input
+                type="number"
+                class="form-control"
+                id="quantity"
+                name="quantity"
+                required
+              />
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Item</button>
+      </form>
+      <ul id="items" class="list-group mt-3"></ul>
+    </div>
 
-      <label for="description">Description:</label>
-      <textarea id="description" name="description" required></textarea
-      ><br /><br />
-
-      <label for="price">Price:</label>
-      <input type="number" id="price" name="price" required /><br /><br />
-
-      <label for="quantity">Quantity:</label>
-      <input type="number" id="quantity" name="quantity" required /><br /><br />
-
-      <button type="submit" id="addItemButton">Add Item</button>
-    </form>
-    <ul id="items"></ul>
+    <!-- Add Bootstrap JS and Popper.js scripts (required for Bootstrap) -->
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+    
     <script src="index.js"></script>
   </body>
 </html>
